Desktop/hackathon-5/production/k8s/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fte-api
  namespace: fte-production
  labels:
    app: fte-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fte-api
  template:
    metadata:
      labels:
        app: fte-api
    spec:
      containers:
        - name: fte-api
          image: customer-success-fte:latest
          command:
            - uvicorn
            - production.api.main:app
            - --host
            - "0.0.0.0"
            - --port
            - "8000"
            - --workers
            - "2"
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              memory: "256Mi"
              cpu:    "250m"
            limits:
              memory: "512Mi"
              cpu:    "500m"
