Desktop/hackathon-5/production/k8s/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fte-worker
  namespace: fte-production
  labels:
    app: fte-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fte-worker
  template:
    metadata:
      labels:
        app: fte-worker
    spec:
      containers:
        - name: fte-worker
          image: customer-success-fte:latest
          command: ["python", "-m", "production.workers.message_processor"]
          resources:
            requests:
              memory: "512Mi"
              cpu:    "500m"
            limits:
              memory: "1Gi"
              cpu:    "1000m"
