Desktop/hackathon-5/production/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fte-ingress
  namespace: fte-production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: fte.techcorp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fte-api-service
                port:
                  number: 80
  tls:
    - hosts:
        - fte.techcorp.io
      secretName: fte-tls-secret
